# selen

./: .gitignore  .gmtcommands4  AUTHORS  COPYING  Jenkinsfile  LICENSE  Makefile  Makefile.in  README.md  aclocal.m4  common.mod  common_for_spectrum.mod  config.sle.I6G-R44-L128-I33  config.sle.TEST  config.status  configure  configure.ac  data.inc  esl.f90  flags.guess  geo.f90  make_sle.sh  makeselen.sh  ms.f90  of_dv.f90  purge_on.sh  px.f90  px_rec.f90  rec_ice.f90  rmaps.f90  rsl.f90  rslc.f90  run_ppr.sh  sh_rslc.f90  sh_tgauges.f90  shape_factors.f90  shice.f90  shtools.f90  shtools.mod  sle.f90  (+4 more)
.github/workflows/: linux.yml
CONFIGS/: config.sle.I3G-R44-L128-I13  config.sle.I5G-R44-L128  config.sle.I5G-R44-L128-I33  config.sle.I6G-R30-L64-I22  config.sle.I6G-R44-L128-I33  config.sle.TEST
DATA/: AKNB12.txt  NA_KK.txt  README  geodetic-points-GS18.txt  geodetic-points.txt  rlr-trends.txt
GMT_scripts/: fps-bcm-fc76.gmt  fps-fc76.gmt  fps-sle-ela-dot.gmt  fps-sle-ela-var.gmt  fps-sle.gmt  gmaps.gmt  gmaps2.gmt  ice-REV2-nn42.gmt  ice-REV2.gmt  ice-REV3-nn42.gmt  ice-REV3-nn52.gmt  map.gmt  of-REV4-nn42.gmt  of-REV4-nn52.gmt  of-REV4.gmt  rsl-MULTI.gmt  rsl-REV1.gmt  rsl-REV2.gmt  rsl-SINGLE.gmt  topo-REV1.gmt  topo-REV2-nn42.gmt  topo-REV2-nn52.gmt  topo-REV2.gmt  topo.gmt
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: SELEN-User-Manual.tex
doc/Figures/: selen-cover.ai
docker/selen-buildenv-bionic/: Dockerfile  README.md
m4/: acltx_prog_ps2pdf.m4  ax_fortran_quad_real.m4  ax_prog_gmt.m4
src/: Makefile  Makefile.am  Makefile.in  config.f90  cosdd.f90  dom.f90  gmaps.f90  harmo.f90  harmonics.f90  j_index.f90  lj.f90  mj.f90  parameters.inc  plmbar.f90  plmbar_d1.f90  plmbar_mod.f90  plmbar_mod_d1.f90  pproc-sle-REV16.f90  pproc-sle-REV19.f90  pproc-sle-REV21.f90  pproc-sle-REV22.f90  px.f90  px_rebuild.f90  px_rec.f90  rec_of.f90  rsl.f90  rsl_zones.f90  selen.sh  sh.f90  sh_of.f90  sh_rsl.f90  sh_rslc.f90  sh_tgauges.f90  sha-REV2.f90  shtools.f90  sindd.f90  sle-REV16.f90  sle-REV19.f90  sle-REV21.f90  sle-REV22.f90  (+11 more)
