# Process this file with autoconf to produce a configure script.

AC_INIT([SELEN], [2.9], BUG-REPORT-ADDRESS)
AC_CONFIG_MACRO_DIR([m4])

# Checks for programs.
AC_LANG(Fortran)
AC_PROG_FC

# Check for OpenMP
AC_OPENMP

# Check for Fortran specific flags, etc

# Check for support programs
AX_PROG_GMT
ACLTX_PROG_PS2PDF

AC_CONFIG_FILES([Makefile])

AC_OUTPUT

